@@ -1,9 +1,9 @@
 AUX README.Gentoo 823 RMD160 be59c37906fca17fa25f6781d3f5e7abc114dc57 SHA1 5a1f126af728f5220b97623050e2f9b1ea5ae58e SHA256 3985fd1810f660ea1c1f2732f719b069b6934d62d8d9e8a09287e63f049ba27d
 AUX code2color.patch 1110 RMD160 712f7b79c94f92ee62825d5f53627f18fae693d2 SHA1 a82f937f3a923b52adc4f14cfc9b641903884839 SHA256 a3887126826ef0b4b821bd97cf4e7abfc8b1c9280bf2bb18a2a4cec9a2973936
 AUX less.envd 50 RMD160 e9d7b2497aa81e13b740dc765c0fc87d4f1f2f8e SHA1 f903d459e7f0b2c14009304bebb7a045a7cccf9d SHA256 1f186ac4f500c842a9016702b3d7e9d69fe161db23cf56c316ed7f5a51da6a4e
-AUX lesspipe.sh 7048 RMD160 29baa05c86fc700b6b23a7858f61c9a1639766d0 SHA1 150e512336ba1c8fdb969f701da40948a173939e SHA256 724bea7025997623922861cc061b263947cb8cabd1d9b42fa0425ead4fcd46d9
+AUX lesspipe.sh 7186 RMD160 46d1d0985bd0576615168fddfe2725997a5b0f31 SHA1 d130ddbdb41cadf98ea8c03b391d25cb07ea70f8 SHA256 a941abb627bcab8ac7eff55c0471f5b412eace5d1796bef53a80b42dd3327322
 DIST code2color 199875 RMD160 378d340a20c3fe500f19116220d54816fe279225 SHA1 b30526dd52c747b8bd6dcf53cf5cc94824c47feb SHA256 ce63f148293a81b0fe5e072f33285f9bf4f1d832f64b23a2220519674a47091d
 DIST less-436.tar.gz 303921 RMD160 b186b76fcdbf38056b32fbc1b54877dccf64a8ec SHA1 f78998a1a79a7e1962c901dd41bdc3d1c2005471 SHA256 57a16ff07431a9af45cf1cd5b374e1066d019304219f0d156e22bb8c4d6734d2
 EBUILD less-436.ebuild 1617 RMD160 6680f6098d9ac26075d342c1ba402df8162ba66a SHA1 94ddab08c241536911babba78d9c91016f7c7f18 SHA256 75ed0d93194c0ce333787a499c35d8273c99c48cd478511113bc6fd56c76250f
-MISC ChangeLog 13361 RMD160 5568e5c5db7448de7d3c8864c6772668ba6944d1 SHA1 108bb66ac44797e06c04c3f0b57aa0fb31a50f85 SHA256 a289c15dba734271e6f388b01b99c3e81a7054b20a8ee8e9e6f07b884fc8fbf2
+MISC ChangeLog 13528 RMD160 01332cdc082ce08d67fa595d83220580e7cf1670 SHA1 a992c6cf3b8139291bd9cac9b320481c79ea5e2e SHA256 061920934f7307cc40ae5bdf742679873cf294e89b0f5e9cbad53f0d0f2ad2e0
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
